# Void

./: CHANGELOG.md  Dockerfile  GLOBAL_MODE.md  QUICKSTART.md  README.md  UPDATE_SUMMARY.md  config-examples.yaml  config-global-example.yaml  config-global-test.yaml  config.yaml  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: docker-image.yml
config/: config-examples.yaml  config-global-example.yaml  config.yaml
module/: global_scanner.py  notification.py  unseeded.py
tests/: test_path_mapping.py
tools/: config.py  logs.py
